--- a/tipss.html
+++ b/tipss.html
@@ -1,112 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css estilos/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="scss/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
-    <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>IMA</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
+  <meta name="keywords" content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="scss/estilos.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>IMA Tips saludables</title>
 </head>
+
 <body class=" body container-fluid m-0 p-0">
-    <!--inicio de encabezado-->
-    <header>
+  <!--inicio de encabezado-->
+  <header>
     <div class="container-fluid">
-    <div class="row">
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fs-6">
-      <div class="container-fluid">
-        <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="especialidades.html">ESPECIALIDADES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="staff.html">STAFF</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">TIPSS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">CONTACTO</a>
-            </li>
-          </ul>
-          </ul>
-        </div>
+      <div class="row">
+        <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
+          <div class="container-fluid">
+            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
+              class="header__nav__logo d-inline-block align-text-top">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="especialidades.html">ESPECIALIDADES</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="staff.html">STAFF</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">TIPSS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">CONTACTO</a>
+                </li>
+              </ul>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!--encabezado del header-->
+      <div class="row text-center">
+        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">"Te acercamos nuestros
+          Tips Saludables"</h1>
       </div>
     </div>
-  </nav>
-</div>
-  <!--encabezado del header-->
-  <div class="row text-center">
-    <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">"Te acercamos nuestros Tips Saludables"</h1>
-  </div>
-  </div>
-  </div>
+    </div>
   </header>
- <!--inicio cuerpo principal--> 
+  <!--inicio cuerpo principal-->
   <main class="container-fluid"></main>
-    <div class="row row-cols-2 row-cols-md-2 row-cols-sm-2 g-6 p-2">
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wwvGGG-hESw" allowfullscreen></iframe>
-          <p class="text-center">RECOMENDACIONES COVID</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9IlntOcSxs8" allowfullscreen></iframe>
-          <p class="text-center">ALIMENTACIÓN SANA</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yC_1lzlqGdw" allowfullscreen></iframe>
-          <p class="text-center">CONTROLES GINECOLÓGICOS</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZfIDjqy7ZLE" allowfullscreen></iframe>
-          <p class="text-center">DEPORTE Y SALUD</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/c9UUtbnuoJg" allowfullscreen></iframe>
-          <p class="text-center">¿QUÉ ES EL STRESS? </p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1_yF759B7Dg" allowfullscreen></iframe>
-          <p class="text-center">DIABETES</p>
-        </div>
+  <div class="row row-cols-2 row-cols-md-2 row-cols-sm-2 g-6 p-2">
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wwvGGG-hESw" loading="lazy" allowfullscreen ></iframe>
+        <p class="text-center">RECOMENDACIONES COVID</p>
       </div>
     </div>
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9IlntOcSxs8" loading="lazy" allowfullscreen></iframe>
+        <p class="text-center">ALIMENTACIÓN SANA</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yC_1lzlqGdw" loading="lazy" allowfullscreen></iframe>
+        <p class="text-center">CONTROLES GINECOLÓGICOS</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZfIDjqy7ZLE" loading="lazy" allowfullscreen></iframe>
+        <p class="text-center">DEPORTE Y SALUD</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/c9UUtbnuoJg" loading="lazy" allowfullscreen></iframe>
+        <p class="text-center">¿QUÉ ES EL STRESS? </p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1_yF759B7Dg" loading="lazy" allowfullscreen></iframe>
+        <p class="text-center">DIABETES</p>
+      </div>
+    </div>
+  </div>
   </main>
 
   <!-- Footer -->
-<footer class="footer bg-transparent text-center">
-  <!--mapa del footer-->
-  <div class="container-fluid row align-items-center justify-content-center ">
-     <div class="col-l-8 col-md-6 ">
-         <iframe class="footer__mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar" style="border:0;" allowfullscreen="" height="auto" loading="lazy"></iframe>
+  <footer class="footer bg-transparent text-center">
+    <!--mapa del footer-->
+    <div class="container-fluid row align-items-center justify-content-center ">
+      <div class="col-l-8 col-md-6 ">
+        <iframe class="footer__mapa"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar"
+          style="border:0;" allowfullscreen="" height="auto" loading="lazy" alt="mapa"></iframe>
       </div>
-    <div class="footer__datoscontacto col-l-4 col-md-6">
+      <div class="footer__datoscontacto col-l-4 col-md-6">
         <!--tabla de datos-->
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
@@ -115,25 +124,33 @@
         <p>Horario:L A V 08:00 a 20:00</p>
         <p>institutomedicoasistencial@gmail.com</p>
         <p>TURNOS:2473409030</p>
-    </div>
+      </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes"></a></li>
-          <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img src="./assets/envelopemail.png" alt="logo mail "class="redessociales__imagenes" ></a></li>
-          <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png" alt="logo instagram" class="redessociales__imagenes"> </a></li>
-          <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png" alt="logo facebook"class="redessociales__imagenes" ></a></li>
-          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter" class="redessociales__imagenes"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
+                src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
+                alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
+          <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
+                alt="logo facebook" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter"
+                class="redessociales__imagenes" loading="lazy"></a></li>
         </ul>
       </div>
-    </div> 
-  <!-- Copyright -->
-  <div class="footer__copyright text-center bg-transparent ">
-    © 2022 Copyright:IMA SALUD
-  </div>
-</footer>
-<!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </div>
+    <!-- Copyright -->
+    <div class="footer__copyright text-center bg-transparent ">
+      © 2022 Copyright:IMA SALUD
+    </div>
+  </footer>
+  <!-- Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 
 </body>
+
 </html>
